# cx_dojo_test_assignment

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
tests/: test_api_requests.py  test_db.py  test_engine.py  test_first.py
tests/dataset/: googlerated.json  yelp.json
yelper/scripts/: yelper.py
yelpme/: api_requests.py  db.py  engine.py  google.py  logging.py  models.py  settings.py  setup_db.sql  some.py  sql.py  yelp.py
yelpme/scripts/: yelpme.py
