[tool.poetry]
name = "yelpme"
version = "0.1.1"
description = ""
authors = ["Artem Stepanenko <artem@stepanenko.one>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"
tqdm = "^4.56.0"
python-dotenv = "^0.15.0"
mysql-connector-python = "^8.0.23"
peewee = "^3.14.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest = "^6.2.1"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
yelpme = 'yelpme.scripts.yelpme:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
